# Modular-Reasoning-Scaffold

./: .gitignore  404.html  CODE_OF_CONDUCT.md  LICENSE  NOTICE  README.md  SECURITY.md  deploy_docs.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: main.yml  tests.yml
architecture/: index.html
docs/: architecture.md  examples.md  index.md  interface.md  math-core.md  operators.md  overview.md
examples/: index.html
interface/: index.html
math-core/: index.html
mrs/: __init__.py  core.py  nodes.py  operators.py
mrs.egg-info/: PKG-INFO  SOURCES.txt
mrs_scaffold.egg-info/: PKG-INFO  SOURCES.txt
operators/: index.html
overview/: index.html
search/: search_index.json
tests/: test_basic.py
