[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mrs-scaffold"
version = "1.1.9"
description = "Modular Reasoning Scaffold (MRS) – a lightweight meta-reasoning layer for small LLMs."
authors = [
  { name="RJ Sabouhi", email="symbolicsuite@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = []

[project.urls]
Homepage = "https://rjsabouhi.github.io/Modular-Reasoning-Scaffold/"
Repository = "https://github.com/rjsabouhi/Modular-Reasoning-Scaffold"
Documentation = "https://rjsabouhi.github.io/Modular-Reasoning-Scaffold/"

[tool.setuptools]
packages = ["mrs"]

